--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,4 +8,7 @@ sphinx:
   configuration: docs/conf.py
 python:
   install:
-  - requirements: docs/requirements.txt
+  - method: pip
+    path: .
+    extra_requirements:
+    - doc
