--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,4 +2,6 @@ sphinx==7.1.2
 sphinx-rtd-theme==1.3.0rc1
 recommonmark
 sphinx_markdown_tables
+myst-parser>=2
 myst_nb
+sphinx-book-theme>=1.1.0rc0
