--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,5 +3,9 @@ sphinx-rtd-theme==1.3.0rc1
 recommonmark
 sphinx_markdown_tables
 myst-parser>=2
-myst_nb
+myst-nb>=1
 sphinx-book-theme>=1.1.0rc0
+sphinx-design
+sphinxext-opengraph
+sphinx-copybutton
+nbsphinx>=0.9
