--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,7 +4,7 @@ recommonmark
 sphinx_markdown_tables
 myst-parser>=2
 myst-nb>=1
-sphinx-book-theme>=1.1.0rc0
+sphinx_rtd_theme
 sphinx-design
 sphinxext-opengraph
 sphinx-copybutton
